--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liqidacion_dc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liqidacion_dc.cshtml
@@ -92,6 +92,7 @@
                 sp.MinValue = 0;
                 sp.MaxValue = 999999999;
             });
+            column.PropertiesEdit.DisplayFormatString = "n2";
         });
         settings.Columns.Add(column =>
         {
