--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_GridViewPartial_orden_compra_ext_det.cshtml
@@ -55,20 +55,7 @@
                 Html.RenderPartial("_CmbProducto_Importacion", DataBinder.Eval(c.DataItem, "IdProducto"));
             });
         });
-        //settings.Columns.Add(column =>
-        //{
-        //    column.FieldName = "IdUnidadMedida";
-        //    column.Caption = "Unidad de medida";
-        //    column.Width = Unit.Percentage(20);
-        //    column.EditorProperties().ComboBox(p =>
-        //    {
-        //        p.Columns.Add("descripcion", "Descripción").Width = Unit.Percentage(100);
-        //        p.TextField = "descripcion";
-        //        p.ValueField = "IdUnidadMedida";
-        //        p.ValueType = typeof(string);
-        //        p.DataSource = ViewBag.lst_undades;
-        //    });
-        //});
+
         settings.Columns.Add(column =>
         {
             column.FieldName = "od_cantidad";
@@ -88,6 +75,8 @@
             column.FieldName = "od_total_fob";
             column.Caption = "Total";
             column.Width = Unit.Percentage(15);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
 
         });
     });
