--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -16,7 +16,7 @@
         <div class="col-md-12">
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="pr_codigo">Código</label>
+                    <label for="pr_codigo">Código*</label>
                     @Html.TextBoxFor(q => q.pr_codigo, new { @class = "form-control", @id = "pr_codigo" })
                     @Html.ValidationMessageFor(q => q.pr_codigo, "", new { @class = "text-danger" })
                 </div>
