--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liquidacion_oc_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/LiquidacionOrdenCompra/_GridViewPartial_liquidacion_oc_det.cshtml
@@ -44,6 +44,13 @@
         });
         settings.Columns.Add(column =>
         {
+            column.FieldName = "od_costo";
+            column.Caption = "Valor U.";
+            column.Width = Unit.Percentage(15);
+
+        });
+        settings.Columns.Add(column =>
+        {
             column.FieldName = "od_total_fob";
             column.Caption = "Valor FOB";
             column.Width = Unit.Percentage(15);
