--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Nuevo.cshtml
@@ -9,7 +9,7 @@
 }
 @using (Html.BeginForm("Nuevo", "TipoAF", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
-
+    @Html.HiddenFor(q=>q.IdEmpresa)
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
