--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/_GridViewPartial_tipoactivo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/_GridViewPartial_tipoactivo.cshtml
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -91,7 +91,7 @@
                 {
                     var keyValue = DataBinder.Eval(container.DataItem, "IdActivoFijoTipo");
                     hyperlink.Properties.Text = "Categorías";
-                    hyperlink.NavigateUrl = Url.Action("Index", "CategoriaAF", new { IdActivoFijoTipo = keyValue });
+                    hyperlink.NavigateUrl = Url.Action("Index", "CategoriaAF", new { IdEmpresa = DataBinder.Eval(container.DataItem, "IdEmpresa"), IdActivoFijoTipo = keyValue });
                 }).Render();
             });
         });
