--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/_GridViewPartial_categoria_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/CategoriaAF/_GridViewPartial_categoria_activo.cshtml
@@ -2,7 +2,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_categoria_activo";
-        settings.CallbackRouteValues = new { Controller = "CategoriaAF", Action = "GridViewPartial_categoria_activo", IdActivoFijoTipo = ViewBag.IdActivoFijoTipo };
+        settings.CallbackRouteValues = new { Controller = "CategoriaAF", Action = "GridViewPartial_categoria_activo", IdEmpresa = ViewBag.IdEmpresa, IdActivoFijoTipo = ViewBag.IdActivoFijoTipo };
         settings.KeyFieldName = "IdCategoriaAF";
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
 
@@ -59,8 +59,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo")},
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo"), IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdActivoFijoTipo = DataBinder.Eval(tc.DataItem, "IdActivoFijoTipo"), IdCategoriaAF = DataBinder.Eval(tc.DataItem, "IdCategoriaAF")},
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -68,14 +68,14 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdActivoFijoTipo = ViewBag.IdActivoFijoTipo }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa, IdActivoFijoTipo = ViewBag.IdActivoFijoTipo }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = System.Web.UI.WebControls.Unit.Pixel(150);
         });
-        
+
         settings.Columns.Add("IdCategoriaAF", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("CodCategoriaAF", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("Descripcion", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(70);
