--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/_GridViewPartial_rev_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RevalorizacionActivo/_GridViewPartial_rev_activo.cshtml
@@ -58,8 +58,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { Id_Mejora_Baja_Activo = DataBinder.Eval(tc.DataItem, "Id_Mejora_Baja_Activo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { Id_Mejora_Baja_Activo = DataBinder.Eval(tc.DataItem, "Id_Mejora_Baja_Activo") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), Id_Mejora_Baja_Activo = DataBinder.Eval(tc.DataItem, "Id_Mejora_Baja_Activo") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), Id_Mejora_Baja_Activo = DataBinder.Eval(tc.DataItem, "Id_Mejora_Baja_Activo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -67,7 +67,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new {  IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -90,7 +90,7 @@
         {
             column.SetDataItemTemplateContent(c =>
             {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ACTF_001", "ActivoFijoReportes", new { Area = "Reportes", Id_Mejora_Baja_Activo = DataBinder.Eval(c.DataItem, "Id_Mejora_Baja_Activo").ToString(), Id_Tipo = DataBinder.Eval(c.DataItem, "Id_Tipo").ToString() }, Request.Url.Scheme) + "');\"></span>");             
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ACTF_001", "ActivoFijoReportes", new { Area = "Reportes", Id_Mejora_Baja_Activo = DataBinder.Eval(c.DataItem, "Id_Mejora_Baja_Activo").ToString(), Id_Tipo = DataBinder.Eval(c.DataItem, "Id_Tipo").ToString() }, Request.Url.Scheme) + "');\"></span>");
             });
             column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
         });
