--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Nuevo.cshtml
@@ -11,6 +11,7 @@
 }
 @using (Html.BeginForm("Nuevo", "VentaActivo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
+    @Html.HiddenFor(q => q.IdEmpresa)
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
