--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/_GridViewPartial_retiro_activo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/RetiroActivo/_GridViewPartial_retiro_activo.cshtml
@@ -58,8 +58,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdRetiroActivo = DataBinder.Eval(tc.DataItem, "IdRetiroActivo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdRetiroActivo = DataBinder.Eval(tc.DataItem, "IdRetiroActivo") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdRetiroActivo = DataBinder.Eval(tc.DataItem, "IdRetiroActivo") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdRetiroActivo = DataBinder.Eval(tc.DataItem, "IdRetiroActivo") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -67,7 +67,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
