--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/DepreciacionAF/Modificar.cshtml
@@ -109,7 +109,9 @@
         var periodo = $("#IdPeriodo").val();
 
         var datos = {
-            IdPeriodo: periodo
+            IdPeriodo: periodo,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+
         }
         $.ajax({
             type: 'POST',
