--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/_GridViewPartial_talonario_cheque.cshtml
@@ -61,14 +61,14 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                    Html.ActionLink("Modificar", "Modificar", new { IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") })
+                    Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdBanco = DataBinder.Eval(tc.DataItem, "IdBanco"), Num_cheque = DataBinder.Eval(tc.DataItem, "Num_cheque") })
                         );
                 }
             });
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa  = Core.Erp.Web.Helps.SessionFixed.IdEmpresa }).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
