--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TalonarioChequeBanco/Nuevo.cshtml
@@ -11,7 +11,7 @@
 
 @using (Html.BeginForm("Nuevo", "TalonarioChequeBanco", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
 
 
     <div class="row">
@@ -102,8 +102,10 @@
     function get_id(){
 
         var id = $("#IdBanco").val();
+
         var datos = {
-            IdBanco: id
+            IdBanco: id,
+            IdEmpresa : $("#IdEmpresa").val()
         }
     $.ajax({
             type: 'POST',
@@ -130,9 +132,9 @@
             var docfinal = "" + (doc_inicial + cantidad - 1)
             var docf = "" + (doc_inicial)
             var id = $("#IdBanco").val();
-
             var datos = {
-            IdBanco: id
+                IdBanco: id,
+                IdEmpresa: $("#IdEmpresa").val()
             }
 
         $.ajax({
