--- a/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/_GridViewPartial_tipo_nota.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/TipoNotaBanco/_GridViewPartial_tipo_nota.cshtml
@@ -60,8 +60,8 @@
                 if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdTipoNota = DataBinder.Eval(tc.DataItem, "IdTipoNota") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdTipoNota = DataBinder.Eval(tc.DataItem, "IdTipoNota") },
+                Html.ActionLink("Modificar", "Modificar", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoNota = DataBinder.Eval(tc.DataItem, "IdTipoNota") }) + "&nbsp;" +
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdTipoNota = DataBinder.Eval(tc.DataItem, "IdTipoNota") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }
@@ -69,7 +69,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo", new { IdEmpresa = Core.Erp.Web.Helps.SessionFixed.IdEmpresa}).ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -77,7 +77,7 @@
             c.Width = Unit.Pixel(150);
         });
 
-       
+
         settings.Columns.Add("IdTipoNota", "Código").Width = Unit.Percentage(15);
         settings.Columns.Add("Tipo", "Tipo").Width = Unit.Percentage(15);
         settings.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(60);
