--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_facturas_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/Cobranza/_GridViewPartial_cobranza_facturas_x_cruzar.cshtml
@@ -31,7 +31,6 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
         settings.Columns.Add("IdCbte_vta_nota", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("dc_TipoDocumento", "Tipo").Width = Unit.Percentage(10);
         settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(20);
         settings.Columns.Add("vt_NumDocumento", "# Documento").Width = Unit.Percentage(20);
         settings.Columns.Add(column =>
@@ -45,7 +44,7 @@
         {
             column.Width = Unit.Percentage(10);
             column.FieldName = "vt_fech_venc";
-            column.Caption = "Fecha";
+            column.Caption = "Fecha vcto.";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
         settings.Columns.Add(column =>
